schepen ophalen+ wrapper uitebreid
Shepen worden opgehaald en toegevoegd aan scherm. Wrapper uitgereid,
info user schepen ophalen schepen sturen naar de server

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+
     <div id="menu">
     <button id="newgame-ai">new game AI</button>
     <button id="newgame">new game multiplayer</button>
@@ -17,6 +18,8 @@
         <h2 class="enemy-name"></h2>
         <table class="enemy-board"></table>
     </div>
+
+    <div id="ships"></div>
     
 
     <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
