--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <div id="menu">
     <button id="newgame-ai">new game AI</button>
     <button id="newgame">new game multiplayer</button>
+    <button class="delete-games">delete all games</button>
     <div id="naam"></div>
     <div id="id"></div>
     <ul id="gamelist"></ul>
@@ -28,6 +29,7 @@
     <script src="/apiService.js"></script>
     <script src="/menucontroller.js"></script>
     <script src="/gamecontroller.js"></script>
+    <script src="https://zeeslagavans.herokuapp.com/socket.io/socket.io.js"></script>
     
 </body>
 
