--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     
 
     <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
-    
+    <script src="Ship.js"></script>
     <script src="/app.js"></script>
     <script src="/apiService.js"></script>
     <script src="/menucontroller.js"></script>
