--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
     <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
 
     <script src="jquery-ui-1.11.4.custom/jquery-ui.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="style.css">
 
     <script src="Ship.js"></script>
     <script src="/app.js"></script>
