--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
     <script src="jquery-ui-1.11.4.custom/jquery-ui.js" type="text/javascript"></script>
     <link rel="stylesheet" href="style.css">
 
+    <script src="Tile.js"></script>
     <script src="Ship.js"></script>
     <script src="/app.js"></script>
     <script src="/apiService.js"></script>
