fix op versturen ships naar API

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
         <h2 class="enemy-name"></h2>
         <table class="enemy-board"></table>
     </div>
+    <div id="saveBoard"></div>
 
     <div id="ships"></div>
     
