--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,8 @@
     </div>
     <div id="game">
         <h2 class="enemy-name"></h2>
+        <h3 class="turn"></h3>
+
         <table class="enemy-board"></table>
     </div>
     <div id="saveBoard"></div>
