fix boten plaatsen

--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,12 @@
 
 <body>
 
-
+<div class="container">
     <div id="menu">
-    <button id="newgame-ai">new game AI</button>
-    <button id="newgame">new game multiplayer</button>
-    <button class="delete-games">delete all games</button>
+    <button id="newgame-ai" class="btn-default">new game AI</button>
+    <button id="newgame" class="btn-default">new game multiplayer</button>
+    <button class="delete-games" class="btn-warning">delete all games</button>
+        <button id="toggle-games" class="btn-default">show player list</button>
     <div id="naam"></div>
     <div id="id"></div>
     <ul id="gamelist"></ul>
@@ -29,10 +30,10 @@
 
             </ul>
         </div>
-        <div id="saveBoard"></div>
     </div>
+    <div id="saveBoard"></div>
 
-
+</div>
 
 
 
