enemy board en my board zijn zichtbaar

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
         <h3 class="turn"></h3>
 
         <table class="enemy-board"></table>
+        <table class="my-board"></table>
         <div class="ship-list">
 
             <ul class="list-group" id="ships">
