busy with gamecontroller, update on apiservice

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <div id="menu">
     <button id="newgame-ai" class="btn-default">new game AI</button>
     <button id="newgame" class="btn-default">new game multiplayer</button>
-    <button class="delete-games" class="btn-warning">delete all games</button>
+    <button class="delete-games btn-default">delete all games</button>
         <button id="toggle-games" class="btn-default">show player list</button>
     <div id="naam"></div>
     <div id="id"></div>
@@ -50,7 +50,7 @@
     <script src="/apiService.js"></script>
     <script src="/menucontroller.js"></script>
     <script src="/gamecontroller.js"></script>
-    <script src="https://zeeslagavans.herokuapp.com/socket.io/socket.io.js"></script>
+    <script src="https://zeeslagavans2.herokuapp.com/socket.io/socket.io.js"></script>
     
 </body>
 
