game done added, menu edited,

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,19 @@
         <button id="toggle-games" class="btn-default">show player list</button>
     <div id="naam"></div>
     <div id="id"></div>
-    <ul id="gamelist"></ul>
+    
+    <div id="gamelist">
+
+    <h1>Active games</h1>
+    <ul id="gamelist-started"></ul>
+    <h1>Games in setup</h1>
+    <ul id="gamelist-setup"></ul>
+    <h1>Games in Queue</h1>
+    <ul id="gamelist-queue"></ul>
+    <h1>Match history</h1>
+    <ul id="gamelist-done"></ul>
+    </div>
+
     </div>
 
     <div class="game">
