--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
     <script src="/apiService.js"></script>
     <script src="/menucontroller.js"></script>
     <script src="/gamecontroller.js"></script>
-    <script src="https://zeeslagavans2.herokuapp.com/socket.io/socket.io.js"></script>
+    <script src="https://zeeslagavans.herokuapp.com/socket.io/socket.io.js"></script>
     
 </body>
 
