minor fixes & style change

--- a/src/index.html
+++ b/src/index.html
@@ -36,16 +36,22 @@
         <h2 class="enemy-name"></h2>
         <h3 class="turn"></h3>
 
+        <div>
         <table class="enemy-board"></table>
+        </div>
+        <div>
         <table class="my-board"></table>
+        </div>
         <div class="ship-list">
 
             <ul class="list-group" id="ships">
 
             </ul>
+            <div id="saveBoard"></div>
         </div>
+        
     </div>
-    <div id="saveBoard"></div>
+    
 
 </div>
 
